--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -29,6 +29,8 @@
 
     &--community {
       background-image: url("/images/community.png");
+      margin-right: -7.6925vw;
+      width: calc(100% + 7.6925vw);
     }
   }
 
@@ -44,12 +46,20 @@
       margin-left: auto;
       margin-right: -7.6925vw;
       width: calc(100% - 32px + 7.6925vw);
+      padding: 40px 36px 5px;
       text-align: left;
     }
 
     &--left {
       margin-right: auto;
+      margin-left: -7.6925vw;
+      width: calc(100% - 32px + 7.6925vw);
+      padding: 40px 36px 5px;
       text-align: right;
+
+      .about__btn {
+        margin-left: auto;
+      }
     }
   }
 
