--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,13 +10,13 @@
   &__logo {
     width: 160px;      // 로고 비율 맞게 조절
     height: 24px;
-    margin: 0 auto 28px;
+    margin: 0 auto 52px;
 
     a {
       display: block;
       width: 100%;
       height: 100%;
-      background: url("/images/logo.png") no-repeat center / contain;
+      background: url("/images/footerlogo.png") no-repeat center / contain;
     }
   }
 
@@ -24,14 +24,14 @@
     font-family: var(--font-inter);
     font-size: 14px;
     font-weight: 400;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
   }
 
   &__social {
     display: flex;
     justify-content: center;
-    gap: 12px;
-    margin-bottom: 28px;
+    gap: 38px;
+    margin-bottom: 40px;
     list-style: none;
 
     li a {
@@ -52,12 +52,15 @@
   &__copy {
     font-family: var(--font-inter);
     font-size: 14px;
-    margin-bottom: 8px;
+    font-weight: 400;
+    line-height: 140%;
   }
 
   &__session {
     font-family: var(--font-inter);
     font-size: 14px;
+    font-weight: 400;
+    line-height: 140%;
     opacity: 0.7;
   }
 }
