--- a/src/components/Support/Support.scss
+++ b/src/components/Support/Support.scss
@@ -32,7 +32,7 @@
     font-size: 40px;
     font-weight: 700;
     line-height: 90%;
-    margin-bottom: 12px;
+    margin-bottom: 28px;
   }
 
   &__desc {
@@ -40,16 +40,21 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 140%;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
   }
 
   &__btn {
-    display: inline-block;
-    padding: 10px 20px;
-    border: 1px solid #fff;
-    font-family: var(--font-inter);
-    font-size: 11px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 50px;
+    margin: 0 auto;
+    background: #6C6C6C;
     color: #fff;
+    font-family: var(--font-inter);
+    font-size: 17px;
+    font-weight: 500;
     text-decoration: none;
   }
 }
