--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -77,3 +77,13 @@
     padding-left: 30px;
   }
 }
+
+@media (min-width: 768px) {
+  .sbc {
+  }
+}
+
+@media (min-width: 1024px) {
+  .sbc {
+  }
+}
