--- a/src/components/OurHome/OurHome.scss
+++ b/src/components/OurHome/OurHome.scss
@@ -71,6 +71,9 @@
     line-height: 22px;
     color: #333;
     margin-bottom: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__arrow {
@@ -111,6 +114,12 @@
 
 @media (min-width: 768px) {
   .ourhome {
+    &__title {
+      .mobile-br {
+        display: none;
+      }
+    }
+
     &__slider {
       gap: 20px;
     }
@@ -118,6 +127,23 @@
     &__card {
       flex: 0 0 48%;
       width: 48%;
+    }
+  }
+}
+
+@media (min-width: 1024px) {
+  .ourhome {
+    &__slider {
+      overflow: visible;
+    }
+
+    &__card {
+      flex: 0 0 calc((100% - 20px) / 2);
+      width: calc((100% - 20px) / 2);
+    }
+
+    &__dots {
+      display: none;
     }
   }
 }
