--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,23 +1,20 @@
 .hero {
   position: relative;
-  min-height: 100vh;
+  height: 649px;
+  margin-top: 85px;
 
   &__inner {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100%;
   }
 
   &__content {
     position: relative;
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     text-align: center;
     color: #fff;
-    padding: 80px var(--section-padding) 40px;
+    padding-top: 150px;
     background: url("/images/hero.png") center/cover no-repeat;
 
     &::before {
@@ -58,9 +55,12 @@
   }
 
   &__slider {
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     padding: 16px;
-    background: #1a1a1a;
+    background: rgba(26, 26, 26, 1);
     overflow: hidden;
 
     &::before {
@@ -90,7 +90,7 @@
     flex: 0 0 calc(100vw - 64px);
     width: calc(100vw - 64px);
     scroll-snap-align: center;
-    min-height: 140px;
+    height: 140px;
     padding: 20px;
     background: center/cover no-repeat;
     color: #fff;
@@ -123,7 +123,6 @@
     position: relative;
     font-family: var(--font-inter);
     font-size: 16px;
-    opacity: 0.9;
     margin-bottom: 40px;
   }
 
