--- a/src/components/Careers/Careers.scss
+++ b/src/components/Careers/Careers.scss
@@ -5,7 +5,7 @@
 
   &__image {
     width: 100%;
-    aspect-ratio: 16 / 10;
+    height: 382px;
     background-image: url("/images/career.png");
     background-size: cover;
     background-position: center;
@@ -13,8 +13,8 @@
   }
 
   &__box {
-    margin: -60px var(--section-padding) 0 -7.6925vw;
-    width: calc(100% - 32px + 7.6925vw);
+    margin: -138px var(--section-padding) 0 -30px;
+    width: calc(100% - 32px + 30px);
     padding: 40px 36px 5px;
     background: rgba(40, 30, 30, 0.92);
     color: #fff;
@@ -35,6 +35,7 @@
     line-height: 22px;
     margin-bottom: 30px;
     opacity: 0.9;
+    padding-left: 20px;
   }
 
   &__btn {
