--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -34,6 +34,7 @@
     font-family: var(--font-italianno);
     font-size: 60px;
     font-weight: 400;
+    line-height: 100%;
   }
 
   &__sub {
@@ -60,7 +61,7 @@
     left: 0;
     right: 0;
     padding: 16px;
-    background: rgba(26, 26, 26, 1);
+    background: rgba(26, 26, 26, 39%);
     overflow: hidden;
 
     &::before {
@@ -174,9 +175,10 @@
 
 @media (min-width: 768px) {
   .hero {
-    &__text {
-      padding-top: 190px;
-      padding-bottom: 167px;
+    height: 800px;
+
+    &__content {
+      padding-top: 200px;
     }
 
     &__slider::before {
@@ -185,7 +187,7 @@
 
     &__title {
       font-size: 130px;
-      line-height: 130%;
+      line-height: 70%;
     }
 
     &__sub {
@@ -216,5 +218,16 @@
 
 @media (min-width: 1024px) {
   .hero {
+    &__content {
+      padding-top: 190px;
+    }
+
+    &__title {
+      font-size: 130px;
+    }
+
+    &__sub {
+      font-size: 30px;
+    }
   }
 }
