--- a/src/components/OurHome/OurHome.scss
+++ b/src/components/OurHome/OurHome.scss
@@ -34,7 +34,7 @@
 
   &__img {
     width: 100%;
-    aspect-ratio: 16 / 10;
+    height: 358px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -61,7 +61,6 @@
     font-weight: 700;
     margin-bottom: 10px;
     color: #000;
-    text-decoration: underline;
     text-underline-offset: 3px;
   }
 
@@ -71,7 +70,6 @@
     line-height: 22px;
     color: #333;
     margin-bottom: 25px;
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
@@ -82,14 +80,15 @@
     justify-content: center;
     width: 48px;
     height: 48px;
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 50%;
     text-decoration: none;
     color: #000;
 
     span {
-      font-size: 16px;
+      font-size: 22px;
       line-height: 1;
+      font-weight: 700;
     }
   }
 
