--- a/src/components/FeatureCollection/FeatureCollection.scss
+++ b/src/components/FeatureCollection/FeatureCollection.scss
@@ -9,9 +9,9 @@
 
   &__inner {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-end;
-    padding: 40px var(--section-padding);
+    padding: 17px var(--section-padding);
     height: 100%;
   }
 
