--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,8 +3,9 @@
   color: #fff;
 
   &__inner {
-    padding: 48px var(--section-padding) 40px;
+    padding: 66px var(--section-padding) 65px;
     text-align: center;
+    height: 365px;
   }
 
   &__logo {
