--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -23,8 +23,8 @@
 
     &--about {
       background-image: url("/images/about.png");
-      margin-left: -30px;
-      width: calc(100% + 30px);
+      margin-left: -40px;
+      width: calc(100% + 40px);
       height: 373px;
       aspect-ratio: unset;
     }
@@ -32,7 +32,7 @@
     &--community {
       background-image: url("/images/community.png");
       margin-right: -30px;
-      width: calc(100% + 30px);
+      width: calc(100% + 50px);
       height: 372px;
       aspect-ratio: unset;
     }
@@ -45,26 +45,28 @@
     color: #fff;
     position: relative;
     margin-top: -60px;
+    
 
     &--right {
       margin-top: -115px;
-      margin-left: auto;
-      margin-right: calc(-1 * var(--section-padding));
-      width: calc(100% - 32px + var(--section-padding));
-      padding: 40px 36px 5px;
+      margin-left: 0;
+      width: 110%;
+      padding: 50px 40px 49px 36px;
       text-align: left;
+      height: 412px;
     }
 
     &--left {
       margin-top: -130px;
-      margin-right: auto;
-      margin-left: calc(-1 * var(--section-padding));
-      width: calc(100% - 32px + var(--section-padding));
-      padding: 40px 36px 5px;
+      margin-left: -50px;
+      width: 112%;
+      height: 392px;
+      padding: 50px 40px 20px 36px;
       text-align: right;
 
       .about__btn {
         margin-left: auto;
+        margin-bottom: 0;
       }
     }
   }
@@ -96,7 +98,7 @@
     font-size: 17px;
     font-weight: 500;
     text-decoration: none;
-    margin-bottom: 59px;
+    margin-bottom: 49px;
   }
 }
 
@@ -109,27 +111,35 @@
   .about {
     &__image {
       &--about {
-        margin-left: -46px;
-        width: calc(100% + 46px);
+        width: calc(100% - 32px);
+        height: 440px;
+        margin-left: -55px;
+        margin-right: auto;
       }
 
       &--community {
+        width: calc(100% - 32px);
+        margin-left: auto;
         margin-right: -46px;
-        width: calc(100% + 46px);
+        height: 500px;
       }
     }
 
     &__box {
       &--right {
+        margin-top: -175px;
         margin-right: 0;
         width: calc(100% - 85px);
         margin-left: auto;
+        height: 349px;
       }
 
       &--left {
+        margin-top: -200px;
         margin-left: 0;
         width: calc(100% - 85px);
         margin-right: auto;
+        height: 319px;
       }
     }
 
