--- a/src/components/Support/Support.scss
+++ b/src/components/Support/Support.scss
@@ -19,7 +19,7 @@
     justify-content: center;
     text-align: center;
     padding: 0 var(--section-padding);
-    min-height: 300px;
+    height: 402px;
   }
 
   &__overlay {
