--- a/src/components/Support/Support.scss
+++ b/src/components/Support/Support.scss
@@ -68,11 +68,13 @@
     &__title {
       font-size: 70px;
       line-height: 90%;
+      margin-bottom: 22px;
     }
 
     &__desc {
       font-size: 22px;
       line-height: 28px;
+      margin-bottom: 61px;
 
       .mobile-br {
         display: none;
