--- a/src/components/Careers/Careers.scss
+++ b/src/components/Careers/Careers.scss
@@ -42,7 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 122px;
+    width: 150px;
     height: 50px;
     margin-left: auto;
     background: #6C6C6C;
@@ -58,15 +58,13 @@
 @media (min-width: 768px) {
   .careers {
     &__box {
-      margin: -60px auto 0 var(--section-padding) !important;
+      margin: -170px auto 0 var(--section-padding) !important;
       width: calc(100% - 142px);
     }
 
     &__btn {
       width: 200px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      height: 50px;
     }
   }
 }
