--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -128,6 +128,7 @@
     font-family: var(--font-inter);
     font-size: 16px;
     margin-bottom: 40px;
+    font-weight: 400;
   }
 
   &__card-icon {
@@ -171,14 +172,14 @@
 
 @media (min-width: 768px) {
   .hero {
-    height: 825px;
+    height: 800px;
 
     &__content {
       padding-top: 230px;
     }
 
     &__slider {
-      height: 216px;
+      height: 209px;
 
       &::before {
         background: rgba(0, 0, 0, 0.15);
@@ -199,7 +200,6 @@
       padding: 0;
       overflow: visible;
       scroll-snap-type: none;
-      height: 100%;
       align-items: center;
     }
 
@@ -207,6 +207,7 @@
       flex: 1;
       width: auto;
       scroll-snap-align: none;
+      padding-top: 50px;
     }
 
     &__card-title {
