--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -173,9 +173,10 @@
 @media (min-width: 768px) {
   .hero {
     height: 800px;
+    margin-top: 115px;
 
     &__content {
-      padding-top: 230px;
+      padding-top: 210px;
     }
 
     &__slider {
