--- a/src/components/FeatureCollection/FeatureCollection.scss
+++ b/src/components/FeatureCollection/FeatureCollection.scss
@@ -90,5 +90,29 @@
 }
 
 @media (min-width: 1024px) {
-  
+  .fc {
+    height: 715px;
+    &__content {
+      padding: 42px 84px 50px 82px;
+    }
+
+    .fc__inner {
+        padding-right: 79px;
+    }
+
+    &__title {
+      font-size: 68px;
+      line-height: 68px;
+    }
+
+    &__sub {
+      font-size: 38px;
+      line-height: 38px;
+      margin-top: 24px;
+      margin-bottom: 30px;
+    }
+
+  }
+
+   
 }
