--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -115,5 +115,18 @@
 
 @media (min-width: 1024px) {
   .footer {
+    &__logo {
+      width: 276px;
+      height: 27px;
+      margin-bottom: 50px;
+    }
+
+    &__connect {
+      font-size: 20px;
+    }
+
+     &__social {
+    margin-bottom: 40px;
+  }
   }
 }
