--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -119,5 +119,47 @@
 
 @media (min-width: 1024px) {
   .sbc {
+    &__title {
+      font-size: 40px;
+    }
+
+    &__name {
+      font-size: 50px;
+      margin-right: 50px;
+    }
+
+    &__sub {
+      font-size: 22px;
+    }
+
+    &__list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+    }
+
+    &__card {
+      height: 280px;
+
+      &--dean {
+        grid-column: 1;
+        grid-row: 1;
+      }
+
+      &--jolene {
+        grid-column: 2;
+        grid-row: 1;
+      }
+
+      &--crypton {
+        grid-column: 1 / -1;
+        grid-row: 2;
+      }
+
+      &--alton {
+        grid-column: 1 / -1;
+        grid-row: 3;
+      }
+    }
   }
 }
