--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -154,11 +154,13 @@
       &--crypton {
         grid-column: 1 / -1;
         grid-row: 2;
+        height: 319px;
       }
 
       &--alton {
         grid-column: 1 / -1;
         grid-row: 3;
+        height: 332px;
       }
     }
   }
