--- a/src/components/Careers/Careers.scss
+++ b/src/components/Careers/Careers.scss
@@ -76,6 +76,7 @@
       width: calc(100% - 481px);
       bottom: 70px;
       padding-top: 21px;
+      padding: 21px 59px 5px 67px;
     }
 
     &__image {
