--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -41,7 +41,7 @@
   &__box {
     width: calc(100% - 32px);
     padding: 40px 24px 5px;
-    background: rgba(40, 30, 30, 0.92);
+    background: #000000;
     color: #fff;
     position: relative;
     margin-top: -60px;
@@ -51,7 +51,7 @@
       margin-top: -115px;
       margin-left: 0;
       width: 110%;
-      padding: 51px 40px 49px 36px;
+      padding: 51px 11.11% 49px 10%;
       text-align: left;
     }
 
@@ -59,7 +59,7 @@
       margin-top: -130px;
       margin-left: -50px;
       width: 112%;
-      padding: 51px 40px 52px 36px;
+      padding: 51px 11.11% 52px 10%;
       text-align: right;
 
       .about__btn {
@@ -128,7 +128,9 @@
         margin-right: 0;
         width: calc(100% - 98px);
         margin-left: auto;
+        padding: 52.76px 8.72% 51.46px 6.64%;
       }
+
 
       &--left {
         margin-top: -200px;
@@ -136,6 +138,7 @@
         width: calc(100% - 114px);
         margin-right: auto;
         height: 319px;
+        padding: 48px 6.64% 48px 3.39%;
       }
     }
 
@@ -173,6 +176,7 @@
         transform: translateY(-50%);
         width: 66%;
         margin: 0;
+        padding: 41px 5.86% 59px 6.35%;
       }
 
       &--left {
@@ -183,6 +187,7 @@
         width: 66%;
         margin: 0;
         height: auto;
+        padding: 50px 5.76% 50px 3.81%
       }
     }
 
