--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   right: 0;
   z-index: 100;
   background: #fff;
-
+  
   &__inner {
     display: flex;
     align-items: center;
@@ -69,6 +69,7 @@
   .header {
     &__inner {
       padding: 38px var(--section-padding) 43px;
+      height: 105px;
     }
 
     &__logo {
@@ -84,6 +85,7 @@
 
 @media (min-width: 1024px) {
   .header {
+
     &__logo {
       width: 354px;
       height: 29px;
