--- a/src/components/OurHome/OurHome.scss
+++ b/src/components/OurHome/OurHome.scss
@@ -105,11 +105,17 @@
 
 @media (min-width: 768px) {
   .ourhome {
+    &__inner {
+      padding-right: 0;
+    }
+
     &__img {
       height: 449px;
     }
 
     &__title {
+      padding-right: var(--section-padding);
+
       .mobile-br {
         display: none;
       }
@@ -120,25 +126,37 @@
     }
 
     &__card {
-      flex: 0 0 48%;
-      width: 48%;
+      flex: 0 0 calc(80% - 20px);
+      width: calc(80% - 20px);
+
+      &:last-child {
+        margin-right: var(--section-padding);
+      }
+    }
+
+    &__dots {
+      padding-right: var(--section-padding);
     }
   }
 }
 
 @media (min-width: 1024px) {
   .ourhome {
-    &__slider {
-      overflow: visible;
+    &__inner {
+      padding-right: var(--section-padding);
     }
 
     &__card {
       flex: 0 0 calc((100% - 20px) / 2);
       width: calc((100% - 20px) / 2);
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
 
     &__dots {
-      display: none;
+      padding-right: 0;
     }
   }
 }
