--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -165,3 +165,40 @@
     }
   }
 }
+
+@media (min-width: 1920px) {
+  .sbc {
+    &__list {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 464px 264px;
+      align-items: start;
+      gap: 30px;
+    }
+
+    &__card {
+      &--alton {
+        grid-column: 1 / 3;
+        grid-row: 1 / 3;
+        height: 758px;
+      }
+
+      &--dean {
+        grid-column: 3;
+        grid-row: 1;
+        height: 464px;
+      }
+
+      &--jolene {
+        grid-column: 4;
+        grid-row: 1;
+        height: 464px;
+      }
+
+      &--crypton {
+        grid-column: 3 / 5;
+        grid-row: 2;
+        height: 264px;
+      }
+    }
+  }
+}
