--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -208,10 +208,12 @@
     &__image {
       &--about {
         margin-left: 0;
+        width: 58%;
       }
 
       &--community {
         margin-right: 0;
+        width: 58%;
       }
     }
 
