--- a/src/components/FeatureCollection/FeatureCollection.scss
+++ b/src/components/FeatureCollection/FeatureCollection.scss
@@ -114,10 +114,11 @@
   }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1600px) {
   .fc {
     .fc__inner {
       padding-right: 344px;
+      padding-top: 82px;
     }
 
     &__content {
