--- a/src/components/ShopByCollection/ShopByCollection.scss
+++ b/src/components/ShopByCollection/ShopByCollection.scss
@@ -166,7 +166,7 @@
   }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1600px) {
   .sbc {
     &__list {
       grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -179,24 +179,28 @@
       &--alton {
         grid-column: 1 / 3;
         grid-row: 1 / 3;
+        width: 758px;
         height: 758px;
       }
 
       &--dean {
         grid-column: 3;
         grid-row: 1;
+        width: 371px;
         height: 464px;
       }
 
       &--jolene {
         grid-column: 4;
         grid-row: 1;
+        width: 371px;
         height: 464px;
       }
 
       &--crypton {
         grid-column: 3 / 5;
         grid-row: 2;
+        width: 771px;
         height: 264px;
       }
     }
