--- a/src/components/ShopByStyle/ShopByStyle.scss
+++ b/src/components/ShopByStyle/ShopByStyle.scss
@@ -197,7 +197,7 @@
   }
 }
 
-@media (min-width: 1920px) {
+@media (min-width: 1600px) {
   .sbs {
     &__inner {
       padding-right: 0;
@@ -211,8 +211,11 @@
       margin-right: calc(-1 * var(--section-padding));
     }
 
+     &__image {
+      width: 371px;
+    }
+
     &__track {
-      width: 73%;
       &::after {
         content: "";
         flex-shrink: 0;
@@ -220,9 +223,21 @@
       }
     }
 
+     &--japandi {
+        margin-top: 208px;
+      }
+
+      &--midcentury {
+        margin-top: 83px;
+      }
+
+      &--community {
+        margin-top: 159px;
+      }
+
     &__slide {
-      flex: 0 0 30%;
-      width: 30%;
+      flex: 0 0 420px;
+      width: 420px;
     }
 
     &__desc {
